--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.19.1"
+    "prisma": "^5.19.1",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
