--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.19.1",
-    "winston": "^3.14.2"
+    "winston": "^3.14.2",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
